--- a/index.html
+++ b/index.html
@@ -1,176 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>网络空间安全实验室-首页</title>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=IOkLnYFazEBI9uz2HFlie65N1At4trLK"></script>
-    <link rel="icon" href="img/logo/logo_1.png" type="image/png" sizes="16*16">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</head>
-<body>
-<div class="header">
-    <img  class="logo_3" src="img/logo/logo_3.png">
-    <div class="nav">
-        <ul >
-            <li class="a"><a  class="font" href="index.html">首页</a></li>
-           <li id="down66" class="a"><a href="#">团队概况</a>
-               <div id="down66-content">
-                   <a href="member.html">主要成员</a><br>
-                   <a href="#">管理与奖励制度</a><br>
-                   <a href="#">毕业生代表简介</a><br>
-               </div>
-           </li>
-
-            <li class="a"><a class="font" href="#">项目案例</a></li>
-            <li class="a"><a class="font" href="#">合作伙伴</a></li>
-            <li class="a"><a class="font" href="#">关于我们</a></li>
-        </ul>
-    </div>
-    <div class="banner">
-        <img src="img/index/banner.jpg">
-    </div>
-</div>
-<div class="main">
-    <div class="content">
-       <div class="about_img">
-        <img src="img/index/td.jpg">
-        </div>
-        <div class="small_img">
-        </div>
-        <div class="team_text">
-            <p class="font">团队概况</p><br>
-            <p class="font_s">实验室研究方向: ·网络空间安全·大数据分析及智能信息处理·互联网+<br>
-                实验室科研情况: ·在研项目情况：承担了30余项与网络安全相关的项目，包括：国家自<br>
-                然科学基金、国家“863”计划、国防 “十二五”基础预研等。·科研成果：四川省科技<br>
-                进步奖二等奖2项，相关论文发表200余篇、专著10部、专利授权与申报30余项。</p>
-        </div>
-        <div class="case">
-        <p class="font_s">CASE&nbsp;DEMONSTRATION</p>
-            <p class="font">项目案例展示</p>
-            <br>
-            <div id="myCarousel" class="carousel slide">
-                <!-- 轮播（Carousel）指标 -->
-                <ol class="carousel-indicators">
-                    <li  data-target="#myCarousel" data-slide-to="0" class="active">
-                    </li>&nbsp;&nbsp;
-                    <li data-target="#myCarousel" data-slide-to="1">
-                    </li>
-                </ol>
-                <!-- 轮播（Carousel）项目 -->
-                <div class="carousel-inner">
-                    <div id="pic0" class="item active">
-                        <!--调表格宽度-->
-                        <table class="left__">
-                            <tr>
-                                <td><a href="#"><img src="img/index/1.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/2.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/3.jpg"></a></td>
-                            </tr>
-                            <tr>
-                                <td><a href="#"><img src="img/index/4.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/5.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/6.jpg"></a> </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div id="pic1" class="item">
-                        <table class="left__" >
-                            <tr>
-                                <td><a href="#"><img src="img/index/6.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/5.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/4.jpg"></a></td>
-                            </tr>
-                            <tr>
-                                <td><a href="#"><img src="img/index/3.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/2.jpg"></a> </td>
-                                <td><a href="#"><img src="img/index/1.jpg"></a> </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-                <!-- 轮播（Carousel）导航 -->
-                <a class="carousel-control left" href="#myCarousel" data-slide="prev"><br><br><br><br><br><br><br><br><br><br><img src="img/1.png"></a>
-                <a class="carousel-control right" href="#myCarousel" data-slide="next"><br><br><br><br><br><br><br><br><br><br><img src="img/2.png"></a>
-
-            </div>
-
-        </div>
-
-    </div>
-
-    <div class="cooperative">
-        <br><br>
-        <p class="font_s">COOPERATIVE&nbsp;PARTNER</p>
-        <p class="font">合作伙伴</p><br>
-        <table>
-            <tr class="coo_table">
-                <td class="sh" ><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="bd"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="tx"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="in"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="xm"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-            </tr>
-            <tr class="coo_table">
-                <td class="eb"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="wy"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="hw"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="qn"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-                <td class="mp"><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </td>
-            </tr>
-        </table>
-    </div><br>
-    <div class="contact">
-        <div class="contact_left"><br>
-        <p class="font_s">CONTACT&nbsp;US</p>
-        <p class="font">联系我们</p><br>
-        <p class="font_s">电子科技大学</p>
-        <p class="font_s">网络空间安全实验室</p><br>
-        <p class="font_s">&nbsp;&nbsp;联系地址：成都市建设北路二段四号</p>
-        <p class="font_s">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;成都市高新区（西区）西源大道2006号</p><br>
-            <img class="lqh" src="img/index/liuqihe.png"><p class="font_s">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15208292978（刘老师）</p>
-            <p class="font_s">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;QIHELIU@UESTC.EDU.CN</p><br>
-            <img  class="wcq" src="img/index/wuchunjiang.png">
-            <p class="font_s">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;15308059055(吴老师)</p>
-            <p class="font_s">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CHUNJIANGWU@126.COM</p><br>
-        </div>
-        <div id="allmap">
-
-        </div>
-    </div>
-</div>
-<div class="footer">
-    <div class="footer_content">
-    <p class="footer_left">网络空间安全实验室</p>
-    <p class="footer_right">蜀ICP备&nbsp;05006379&nbsp;号&nbsp;|&nbsp;川公网安备&nbsp;51019002000280&nbsp;号</p>
-    </div>
-</div>
-<script>
-    $(".a").mouseover(function () {
-        $(this).removeClass().addClass("navigation");
-    }).mouseout(function () {
-        $(this).removeClass();
-    })
-    $("#down66").mouseover(function () {
-        $("#down66-content").show();
-    }).mouseout(function () {
-        $("#down66-content").hide();
-    })
-</script>
-<script type="text/javascript">
-    // 百度地图API功能
-    var map = new BMap.Map("allmap");    // 创建Map实例
-    map.centerAndZoom(new BMap.Point(104.110, 30.681), 15);  // 初始化地图,设置中心点坐标和地图级别
-    map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
-    map.setCurrentCity("北京");          // 设置地图显示的城市 此项是必须设置的
-    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
-
-    var marker = new BMap.Marker(new BMap.Point(104.110, 30.681)); // 创建点
-
-    map.addOverlay(marker);            //增加点
-</script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>csl</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
-
