remove img and css file into assets.import bootstrap into project.add Index.vue and Navigation.vue

--- a/management.html
+++ b/management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>网络空间安全实验室-管理与奖励制度</title>
-    <link rel="icon" href="img/logo/logo_1.png" type="image/png" sizes="16*16">
+    <link rel="icon" href="src/assets/img/logo/logo_1.png" type="image/png" sizes="16*16">
     <link rel="stylesheet" type="text/css" href="css/management.css">
 </head>
 <body>
