--- a/member.html
+++ b/member.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>网络空间安全实验室-主要成员</title>
-    <link rel="icon" href="img/logo/logo_1.png" type="image/png" sizes="16*16">
+    <link rel="icon" href="src/assets/img/logo/logo_1.png" type="image/png" sizes="16*16">
     <link rel="stylesheet" type="text/css" href="css/member.css">
     <link href="css/bootstrap.css" rel="stylesheet">
     <script src="js/jquery-3.2.1.min.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="header">
-    <img  class="logo_3" src="img/logo/logo_3.png">
+    <img  class="logo_3" src="src/assets/img/logo/logo_3.png">
     <div class="nav">
         <ul >
             <li class="a"><a  class="font" href="index.html">首页</a></li>
@@ -28,7 +28,7 @@
         </ul>
     </div>
     <div class="banner">
-        <img src="img/index/banner.jpg">
+        <img src="src/assets/img/index/banner.jpg">
     </div>
 </div>
 <div class="main">
@@ -39,43 +39,43 @@
     <div class="person">
         <ul>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/zhoushijie.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/zhoushijie.png"></div><br><br>
                <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;周世杰&nbsp;&nbsp;&nbsp;<span class="font_">教授/博导</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp研究方向为网络安全。2004年3月毕业于电子科技大学计算机科学与工程学院信息安全专业，获博士学位。2006年9月-2007年3月香港大学访问学者、2009年1月-2010年1月美国普渡大学访问学者，现任信息与软件工程学院院长。<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;主持国家自然科学基金3项、国家863重点课题1项。第一作者发表学术论文二十余篇，出版著作《计算机系统与网络安全技术》等4部。荣获四川省科技进步二等奖1项、国家级教学成果二等奖1项。ACM Chengdu Chapter秘书长、CCF成都中心副主席、YOCSEF 2014年-2015年成都主席。
                 </p>
             </li>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/liaoyongjian.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/liaoyongjian.png"></div><br><br>
                 <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;廖永健&nbsp;&nbsp;&nbsp;<span class="font_">副教授</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究方向为公钥密码算法和网络安全协议。2007年毕业于浙江大学电子科学与技术专业，获博士学位。2013年6月-2014年6月加拿大康考迪亚大学访问学者。<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;已发表论文十余篇，完成专著1部，参与国家自然科学基金项目4项。
                 </p>
             </li>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/chenghongrong.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/chenghongrong.png"></div><br><br>
                 <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;程红容&nbsp;&nbsp;&nbsp;<span class="font_">副教授</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究方向为机器学习及其应用。2011年6月获得电子科技大学计算机学院信息与通信工程专业博士学位。2005年7月-2006年7月美国伊利诺伊大学芝加哥分校访问学者。以第一作者发表近十篇论文，获得2013年度ETRI最佳期刊论文奖。主持中央高校基金1项，参与自然科学基金、国家863计划项目多项。出版专著《智慧城市中的移动互联网技术》。荣获国家教学成果二等奖1项。
                 </p>
             </li>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/tanhao.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/tanhao.png"></div><br><br>
                 <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;谭浩&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="font_">副教授</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究方向为网络安全。1999年毕业于电子科技大学，获计算机应用博士学位。作为负责人，主持开发了“企业综合业务系统基础平台”项目。该项目已成功应用到攀钢的ERP系统中。作为负责人，主持开发了“基于SCA的综合化航电业务系统”项目。作为主研，参与了国防科技预研项目。该项目已通过信息产业部鉴定，其水平达到了国际先进水平，具有重要的理论参考价值。</p>
             </li>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/liuqihe.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/liuqihe.png"></div><br><br>
                 <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;刘启和&nbsp;&nbsp;&nbsp;<span class="font_">副教授</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究方向图像处理与模式识别，2005年毕业于电子科技大学，获计算机应用技术博士学位。参与了多项部省级科研项目，积累了丰富的科研经验，如：中央高校基金“基于气体传感器阵列数据的智能分析研究”，自然科学基金项目“盲信号分离若干基本问题的研究”，四川省科技攻关项目“案件现场的智能分析与三维重建系统”，横向项目“3D游戏软件”等。迄今在国内外高水平刊物上发表文章二十余篇，其中被SCI、EI检索十余篇。</p>
             </li>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/liuhui.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/liuhui.png"></div><br><br>
                 <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;刘辉&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="font_">讲师</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究方向为计算机系统结构。1999年毕业于电子科技大学，获计算机软件与理论硕士学位。作为负责人，主持了“基于无人机的数字地形生成服务关键技术研究及应用示范”、 “KVM安全云平台开发”、“钻井系统工程造价管理网络系统” 等省部、企业级项目的开发研制工作，均取得了较好的社会与经济效益。在科研上，《并行算法及其在电子系统中的应用》获得国防科技进步二等奖；在教学上，获得了“教学质量优秀主讲教师”称号，讲授课程获得过教育部、四川省精品课程称号。迄今在国内外高水平刊物上发表文章十余篇，其中被EI检索5篇。
                 </p>
             </li>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/liuleyuan.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/liuleyuan.png"></div><br><br>
                 <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;刘乐源&nbsp;&nbsp;&nbsp;&nbsp;<span class="font_">助理研究员</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究方向为软件的形式化验证、模型检测。
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2014年10月毕业于日本国立九州大学，获工学博士学位。
@@ -84,7 +84,7 @@
                 </p>
             </li>
             <li class="p_list">
-                <div class="p_img"><img src="img/teacher/wuchunjiang.png"></div><br><br>
+                <div class="p_img"><img src="src/assets/img/teacher/wuchunjiang.png"></div><br><br>
                 <p class="font">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;吴春江&nbsp;&nbsp;&nbsp;<span class="font_">高级工程师</span></p><br>
                 <p class="p_text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2008毕业于电子科技大学信息安全专业，获通信工程硕士学位，电子科技大学2017级博士。<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究方向为区块链安全研究与应用。<br>
