--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>csl</title>
+    <title>网络空间安全实验室-主页</title>
   </head>
   <body>
     <div id="app"></div>
