--- a/academy.html
+++ b/academy.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>网络空间安全实验室-学术</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>网络空间安全实验室-学术</title>
 </head>
 <body>
 <div id="academy"></div>
